--- a/index.html
+++ b/index.html
@@ -5,43 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rounded+Mplus+1c:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="image/balao-azul.png" alt="A blue balloon with yellow lines" type="image/x-icon">
     <title>RamenGo</title>
 </head>
 <body>
-    <div class="banner">              
-        <img src="image/capa_topo.png" alt="Caldo 1" class="banner-image">
-        <img src="image/logoAmarela.png" alt="Logo" class="logo">  
+    <div class="banner-container">    
+        <img src="image/logoAmarela.png" alt="Website logo in yellow written RamenGO!" class="logo">          
+        <img src="image/backgroud_topo.png" alt="backgroud of the top of the website in red color with waves" class="banner-image">
+        <img src="image/Ellipse.png" alt="An ellipse in wine color" class="ellipse">  
+        <img src="image/balao-amarelo.png" alt="A yellow balloon with red lines" class="balao-amarelo">  
+        <img src="image/balao-azul.png" alt="A blue balloon with yellow lines" class="balao-azul">  
+        <img src="image/entregadora.png" alt="A food delivery woman with a backpack on her back" class="entregadora"> 
+        
+        <div class="vertical-text">
+            <p>ラlメン</p>
+            <h2>GO!</h2>
+        </div>
         <div class="titles">
-            <div class="subtitle">Enjoy a good ramen in the comfort of your house. Create your own ramen and choose your favorite flavour combination!</div>
-            <button class="action-button">
+            <p class="subtitle">Enjoy a good ramen in the comfort of your house. Create your own ramen and choose your favorite flavour combination!</p>
+            <button class="action-button" onclick="scrollToSection('broth-section')">
                 <span>ORDER NOW</span>
-                <img src="image/icon/btn/setaAmarela.png" alt="Seta">
+                <img src="image/icon/btn/setaAmarela.png" alt="Yellow arrow">
             </button>
         </div>
     </div>
 
     <div class="container">
-        <div class="section">
+        <div class="section" id="broth-section">
             <h2>First things first: select your favorite broth.</h2>
             <p>It will give the whole flavor on your ramen soup.</p>
             <div class="card-container" id="broths"></div>
+            <div class="carousel-indicators" id="broth-indicators"></div>
         </div>
         <div class="section">
             <h2>It’s time to choose (or not) your meat!</h2>
             <p>Some people love, some don’t. We have options for all tastes.</p>
             <div class="card-container" id="proteins"></div>
+            <div class="carousel-indicators" id="protein-indicators"></div>
         </div>
         <div class="section-button">
             <button class="btnOrdem" id="place-order-btn">
                 <span>Place my order</span>
-                <img src="image/icon/btn/setaBranca.png" alt="Seta">
+                <img src="image/icon/btn/setaBranca.png" alt="White arrow">
             </button>
         </div>
     </div>
 
     <div id="alert-modal" class="modal-alert">
         <div class="modalcontent-alert">
-            <img src="image/balao-azul.png" alt="Seta">
+            <img src="image/balao-azul.png" alt="A blue balloon with yellow lines">
             <span id="close-modal" class="close">&times;</span>
             <p id="alert-message"></p>
         </div>
@@ -50,12 +62,18 @@
     <!-- Modal success -->
     <div id="custom-modal" class="modal">
         <div class="modal-content">
-            <img src="image/balao-amarelo.png" alt="Seta">
+            <img src="image/balao-amarelo.png" alt="A yellow balloon with red lines">
             <span id="close-custom-modal" class="close">&times;</span>
             <p id="modal-message"></p>
         </div>
     </div>
 
+    <script>
+        function scrollToSection(sectionId) {
+            const section = document.getElementById(sectionId);
+            section.scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
     <script src="js/RamenGo.js"></script>
 </body>
 </html>
