--- a/success.html
+++ b/success.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rounded+Mplus+1c:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="image/balao-azul.png" alt="A blue balloon with yellow lines" type="image/x-icon">
     <title>RamenGo - Success</title>
 </head>
 <body>
     <div class="success-container">
         <div class="success-left">
-            <img src="image/fundo_success.png" alt="" class="background-image">
+            <img src="image/fundo_success.png" alt="backgroud of the top of the website in blue color with waves" class="background-image">
             <div class="order-details">
-                <img id="order-image" src="" alt="Ramen" class="image-prato">
+                <img id="order-image" src="" alt="Dish chosen to compare" class="image-prato">
                 <div class="order-text">                    
                     <h3>Your Order: </h3>                   
                     <h2 id="order-title"></h2>
@@ -20,7 +21,7 @@
             </div>
         </div>
         <div class="success-right">
-            <img src="image/pessoa_success.png" alt="Person" class="person-image">
+            <img src="image/pessoa_success.png" alt="A person thanking" class="person-image">
             <div class="preparation-text">
                 <h3>どもありがとうございます</h3>
                 <h2>Your order is being prepared</h2>
@@ -29,7 +30,7 @@
 
             <button class="action-button-success" onclick="placeNewOrder()">
                 <span>Place new order</span>
-                <img src="image/icon/btn/setaAmarela.png" alt="Seta">
+                <img src="image/icon/btn/setaAmarela.png" alt="Yellow arrow">
             </button>
         </div>
     </div>
